--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -207,7 +207,7 @@
               </a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="index.html">
+              <a class="nav-link" href="/admin/home">
                 <span class="menu-title">Dashboard</span>
                 <i class="mdi mdi-home menu-icon"></i>
               </a>
