--- a/views/admin/UserDetails/users.ejs
+++ b/views/admin/UserDetails/users.ejs
@@ -82,13 +82,14 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../forms/basic_elements.html">
-              <span class="menu-title">Product</span>
+            <a class="nav-link" href="/admin/product">
+              <span class="menu-title">Products</span>
               <i class="mdi mdi-format-list-bulleted menu-icon"></i>
+              <i class="mdi mdi-format-list-bulleted mdi-shopping"></i>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../charts/chartjs.html">
+            <a class="nav-link" href="/admin/category">
               <span class="menu-title">Category</span>
               <i class="mdi mdi-chart-bar menu-icon"></i>
             </a>
