--- a/views/admin/adminRegister.ejs
+++ b/views/admin/adminRegister.ejs
@@ -36,7 +36,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="basic-addon1"><i class="fas fa-key"></i></span>
                 </div>
-                <input type="text" name="password" class="form-control form-control-sm" placeholder="Password" aria-label="Username"
+                <input type="password" name="password" class="form-control form-control-sm" placeholder="Password" aria-label="Username"
                   aria-describedby="basic-addon1">
               </div>
 
