--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -232,13 +232,14 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/forms/basic_elements.html">
-                <span class="menu-title">Prodect</span>
+              <a class="nav-link" href="/admin/product">
+                <span class="menu-title">Prodects</span>
                 <i class="mdi mdi-format-list-bulleted menu-icon"></i>
+                <i class="mdi mdi-format-list-bulleted mdi-shopping"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/charts/chartjs.html">
+              <a class="nav-link" href="/admin/category">
                 <span class="menu-title">Category</span>
                 <i class="mdi mdi-chart-bar menu-icon"></i>
               </a>
