--- a/views/users/indexLogout.ejs
+++ b/views/users/indexLogout.ejs
@@ -77,10 +77,10 @@
 
                         <%}else{%>
                             <a href="/login" class="flex-c-m trans-04 p-lr-25">
-                                login
+                                Login
                             </a>
                             <a href="/register" class="flex-c-m trans-04 p-lr-25">
-                                Sign up
+                                Sign Up
                             </a>
                        <% } %>
 						
@@ -92,15 +92,15 @@
 				<nav class="limiter-menu-desktop container">
 
 					<!-- Logo desktop -->
-					<a href="#" class="logo">
-						<img src="images/icons/logo-01.png" alt="IMG-LOGO">
+					<a href="/" class="logo">
+						<img src="/kiona-high-resolution-logo-transparent.png" alt="IMG-LOGO">
 					</a>
 
 					<!-- Menu desktop -->
 					<div class="menu-desktop">
 						<ul class="main-menu">
 							<li class="active-menu">
-								<a href="index.html">Home</a>
+								<a href="/">Home</a>
 								<ul class="sub-menu">
 									<li><a href="index.html">Homepage 1</a></li>
 									<li><a href="home-02.html">Homepage 2</a></li>
@@ -109,7 +109,7 @@
 							</li>
 
 							<li>
-								<a href="product.html">Shop</a>
+								<a href="/products">Shop</a>
 							</li>
 
 							<li class="label1" data-label1="hot">
@@ -155,7 +155,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="#"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
@@ -183,8 +183,7 @@
 			</div>
 		</div>
 
-
-		<!-- Menu Mobile -->
+		<!-- Menu Mobile
 		<div class="menu-mobile">
 			<ul class="topbar-mobile">
 				<li>
@@ -249,7 +248,7 @@
 			</ul>
 		</div>
 
-		<!-- Modal Search -->
+		 Modal Search
 		<div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
 			<div class="container-search-header">
 				<button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
@@ -264,7 +263,7 @@
 				</form>
 			</div>
 		</div>
-	</header>
+	</header> -->
 
 
 
@@ -798,6 +797,7 @@
             
 			<div class="row isotope-grid">
                 <% for(let i=0 ; i<products.length ; i++){ %>
+					
 				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					<!-- Block2 -->
 					<div class="block2">
