--- a/views/admin/Products/addProduct.ejs
+++ b/views/admin/Products/addProduct.ejs
@@ -25,7 +25,7 @@
       <!-- partial:../../partials/_navbar.html -->
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-          <a class="navbar-brand brand-logo" href="../../index.html"><img class="h-50" src="../../admin/images/kiona-logo.png" alt="logo" /></a>
+          <a class="navbar-brand brand-logo" href="/admin/home"><img class="h-50" src="../../admin/images/kiona-logo.png" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -186,6 +186,7 @@
                       <div class="form-group">
                         <label >Name</label>
                         <input type="text" name="name" class="form-control" id="exampleInputName1" placeholder="Name">
+                        
                       </div>
                       <div class="form-group">
                         <label >Price</label>
@@ -206,7 +207,7 @@
                       
                       <div class="form-group">
                         <label >Description</label>
-                        <textarea class="form-control" name="description" id="exampleTextarea1" rows="4"></textarea>
+                        <textarea type="text" class="form-control" name="description" id="exampleTextarea1" rows="4"></textarea>
                       </div>
                       <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
                       <button class="btn btn-light">Cancel</button>
