--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,69 +1,72 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    	<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="/kiona-logo.png" />
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/linearicons-v1.0.0/icon-font.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/MagnificPopup/magnific-popup.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/perfect-scrollbar/perfect-scrollbar.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!--===============================================================================================-->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!--===============================================================================================-->
+  <link rel="icon" type="image/png" href="/kiona-logo.png" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="fonts/linearicons-v1.0.0/icon-font.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/MagnificPopup/magnific-popup.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/perfect-scrollbar/perfect-scrollbar.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="css/util.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!--===============================================================================================-->
 
 
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/font-awesome.min.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 
-    <title>Kiona</title>
-  </head>
-  <body>
-    <section class="form-07">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="_form_07_main">
-              <form action="" class="login-form" method="post" onsubmit="check(); return false">
+  <title>Kiona</title>
+</head>
+
+<body>
+  <section class="form-07">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="_form_07_main">
+            <form action="" class="login-form" method="post" onsubmit="check(); return false">
               <div class="row">
                 <div class="col-sm-6 ncv-kl-bn">
                   <div class="_form_07_main_sub_01">
                     <div class="form-07-head">
                       <h2>Kiona</h2>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy</p>
                     </div>
                     <div class="form-7-social-media">
                       <ol>
                         <li><a href="#"><i class="fa fa-google"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        
+
                         <li><a href="#"><i class="fa fa-youtube"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                       </ol>
@@ -75,20 +78,29 @@
                     <div class="_bg_cs">
                       <h2>Sign into your account</h2>
                       <% if(message){%>
-                        <p class="text-success" id="ok"> <%= message %> </p>
-                    <%  } %>
-                    </div>
-                    <div class="form-group">
-                      <label>Enter Your Email</label>
-                      <input type="email" name="email" id="email" class="form-control" type="text" placeholder="Enter Email" required="" aria-required="true">
-                      <p style="color: red;" id="emailErr"></p>
+                        <p class="text-success" id="ok">
+                          <%= message %>
+                        </p>
+                        <% } %>
                     </div>
 
-                    <div class="form-group">
-                      <label>Enter Your Password</label>
-                      <input type="password" name="password" id="password" class="form-control" type="text" placeholder="Enter password" required="" aria-required="true">
-                      <p style="color: red;" id="passwordErr"></p>
-                    </div>
+                    <label>Enter Your Email</label>
+                    <input type="email" name="email" id="email" class="form-control" type="text"
+                      placeholder="Enter Email" required="" aria-required="true">
+                    <p style="color: red;" id="emailErr"></p>
+
+
+
+                    <label>Enter Your Password</label>
+                    <input type="password" name="password" id="password" class="form-control" type="text"
+                      placeholder="Enter password" required="" aria-required="true">
+                    <p style="color: red;" id="passwordErr"></p>
+
+                    <ol>
+                      <a href="#" class="form-control" ><i class="fa fa-google" style="margin-left: 40%;"> Google </i></a>
+                    </ol>
+                    
+
 
                     <div class="checkbox form-group">
                       <div class="form-check">
@@ -100,87 +112,88 @@
                       <a href="#">Forgot Password</a>
                     </div>
 
-                    <% if (typeof userBlocked !== 'undefined' && userBlocked) { %>
+                    <% if (typeof userBlocked !=='undefined' && userBlocked) { %>
                       <script>
-                          alert("<%= message %>");
+                        alert("<%= message %>");
                       </script>
                       <% } %>
-                      
-                  
 
-                    <div class="form-group">
-                      <div class="_btn_04">
-                        <button type="submit" class="login-button"> Login</button>
-                      </div>
-                      <div class="mt-4">
-                        <p class="text-danger m-0">Don't have an account ?</p>
-                        <a style="text-decoration: none;" href="/register">SignUp</a>
-                    </div>
-                    </div>
+
+
+                        
+                          
+                            <button type="submit" class="_btn_04"> Login</button>
+                          
+                          <div class="mt-2" style="display: flex; justify-content: center;">
+                            <p class="text-danger m-0">Don't have an account ?</p>
+                            <a style="text-decoration: none; margin-left: 15px;" href="/register">SignUp</a>
+                          </div>
+                        
                   </div>
                 </div>
-              </form>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
-    </section>
-    <script>
-      setTimeout(() => {
-        document.getElementById("ok").style.display="none"
-      }, 3000);
+    </div>
+    </div>
+  </section>
+  <script>
+    setTimeout(() => {
+      document.getElementById("ok").style.display = "none"
+    }, 3000);
 
 
-      // form Validation
+    // form Validation
 
-      function check() {
-        const form = document.querySelector(".login-form");
-        const email = document.getElementById("email").value;
-        const emailErr = document.getElementById("emailErr");
-        const password = document.getElementById("password").value;
-        const passwordErr = document.getElementById("passwordErr");
-        const emailErrMsg = [];
-        const passwordErrMsg = [];
+    function check() {
+      const form = document.querySelector(".login-form");
+      const email = document.getElementById("email").value;
+      const emailErr = document.getElementById("emailErr");
+      const password = document.getElementById("password").value;
+      const passwordErr = document.getElementById("passwordErr");
+      const emailErrMsg = [];
+      const passwordErrMsg = [];
 
-        if (email === '') {
-          emailErrMsg.push("Please enter Your Email.");
-        } else {
-          const emailRegex = /^[^!#$%&'*+/=?^_`{|}~]+@gmail\.com$/i;
-          if (!emailRegex.test(email)) {
-            emailErrMsg.push("Please enter Your Valid email Id.");
-          }
-        }
-
-        if (password === '') {
-          passwordErrMsg.push("Please enter Your Password");
-        } else {
-          const passwordRegex = [
-            { regex: /.{8,}/, message: "At least 8 Character" },
-            { regex: /\d/, message: "At least 1 digits" },
-            { regex: /[a-z]/, message: "At least 1 lowercase letter" },
-            { regex: /[!@#$%^&*]/, message: "At least 1 special character" },
-            { regex: /[A-Z]/, message: "At least 1 uppercase letter" }
-          ];
-
-          passwordRegex.forEach((rule) => {
-            if (!rule.regex.test(password)) {
-              passwordErrMsg.push(rule.message);
-            }
-          });
-        }
-
-        // display Error Message
-        emailErr.innerHTML = emailErrMsg.join("<br>");
-        passwordErr.innerHTML = passwordErrMsg.join("<br>");
-
-        // submit the form if all validation
-        if (emailErrMsg.length === 0 && passwordErrMsg.length === 0) {
-          form.submit();
+      if (email === '') {
+        emailErrMsg.push("Please enter Your Email.");
+      } else {
+        const emailRegex = /^[^!#$%&'*+/=?^_`{|}~]+@gmail\.com$/i;
+        if (!emailRegex.test(email)) {
+          emailErrMsg.push("Please enter Your Valid email Id.");
         }
       }
 
-    </script>
-    <%- include('../layouts/footer.ejs') %>
-  </body>
+      if (password === '') {
+        passwordErrMsg.push("Please enter Your Password");
+      } else {
+        const passwordRegex = [
+          { regex: /.{8,}/, message: "At least 8 Character" },
+          { regex: /\d/, message: "At least 1 digits" },
+          { regex: /[a-z]/, message: "At least 1 lowercase letter" },
+          { regex: /[!@#$%^&*]/, message: "At least 1 special character" },
+          { regex: /[A-Z]/, message: "At least 1 uppercase letter" }
+        ];
+
+        passwordRegex.forEach((rule) => {
+          if (!rule.regex.test(password)) {
+            passwordErrMsg.push(rule.message);
+          }
+        });
+      }
+
+      // display Error Message
+      emailErr.innerHTML = emailErrMsg.join("<br>");
+      passwordErr.innerHTML = passwordErrMsg.join("<br>");
+
+      // submit the form if all validation
+      if (emailErrMsg.length === 0 && passwordErrMsg.length === 0) {
+        form.submit();
+      }
+    }
+
+  </script>
+  <%- include('../layouts/footer.ejs') %>
+</body>
+
 </html>
