--- a/views/users/registration.ejs
+++ b/views/users/registration.ejs
@@ -77,56 +77,47 @@
                                         <div class="_bg_cs">
                                             <h2>Registration Account</h2>
                                         </div>
-                                        <div class="form-group">
-                                            <label>Enter Your Name</label>
+                                        
+                                            
                                             <input type="text" name="name" id="name" class="form-control" type="text"
-                                                placeholder="Enter Name" required="" aria-required="true">
+                                                placeholder="Enter Name" required="" aria-required="true"   >
                                                 <p style="color: red;" id="nameErr"></p>
-                                        </div>
+                                        
 
-                                        <div class="form-group">
-                                            <label>Enter Your Email</label>
+                                        
+                                           
                                             <input type="email" name="email" id="email" class="form-control" type="text"
                                                 placeholder="Enter Email" required="" aria-required="true">
                                                 <p style="color: red;" id="emailErr"></p>
-                                        </div>
+                                        
 
-                                        <div class="form-group">
-                                            <label>Enter Your Mobile</label>
+                                       
+                                            
                                             <input type="text" name="mobile" id="mobile" class="form-control" type="text"
                                                 placeholder="Enter Mobile" required="" aria-required="true">
                                                 <p style="color: red;" id="mobileErr"></p>
-                                        </div>
+                                       
 
-                                        <div class="form-group">
-                                            <label>Upload your profile photo</label>
+                                    
+                                            
                                             <input type="file" name="image" id="image" class="form-control" type="text"
                                                 placeholder="Upload Image" required="" aria-required="true">
                                                 <p style="color: red;" id="imageErr"></p>
-                                        </div>
+                                     
 
-                                        <div class="form-group">
-                                            <label>Enter your Password</label>
+                                        
+                                            
                                             <input type="password" name="password" id="password" class="form-control" type="text"
                                                 placeholder="Enter password" required="" aria-required="true">
                                                 <p style="color: red;" id="passwordErr"></p>
-                                        </div>
+                                       
 
-                                        <div class="checkbox form-group">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="">
-                                                <label class="form-check-label">
-                                                    Remember me
-                                                </label>
-                                            </div>
-                                            <a href="#">Forgot Password</a>
-                                        </div>
+                                        
 
-                                        <div class="form-group">
-                                            <div class="_btn_04">
-                                                <button type="submit" class="form-control">Register</button>
-                                            </div>
-                                        </div>
+                                        
+                                                <button type="submit" class="_btn_04">Register</button>
+                                            
+                                        
                                     </div>
                                 </div>
                             </div>
