--- a/views/admin/Category/editCategory.ejs
+++ b/views/admin/Category/editCategory.ejs
@@ -172,6 +172,11 @@
                               <div class="card-body">
                                   <h4 class="card-title">Edit Category form</h4>
                                   <p class="card-description">  </p>
+
+                                  <div class="imgcontainer">
+                                    <img src="Photos/category/<%= category.image %>" width="100px" height="100px" alt="" class="profile">
+                                </div>
+
                                   <form class="forms-sample" action="" method="post" id="categoryForm" enctype="multipart/form-data" >
                                       <label>Product upload</label>
                                       <input type="file" name="image" id="image" class="file-upload-default">
@@ -181,6 +186,13 @@
                                               <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
                                           </span>
                                       </div>
+
+                                      <!-- its very importent in this code cant sleeping me  !!!! -->
+                                      <div class="form-group">
+                                        <input type="hidden" name="category_id" value="<%= category._id %>">
+                                      </div>
+                                      <!-- ---------------------------------------------------- -->
+
                                       <div class="form-group">
                                           <label for="exampleInputUsername1">Category</label>
                                           <input type="text"  name="name" class="form-control" id="category" value="<%= category.name %>" required></input>
