--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -56,8 +56,8 @@
 							Help & FAQs
 						</a>
 
-                        <a href="#" class="flex-c-m trans-04 p-lr-25">
-							EN
+                        <a href="/" class="flex-c-m trans-04 p-lr-25">
+							Home
 						</a>
 
 						
@@ -65,7 +65,7 @@
 						
                         <% if(user){%>
 
-                            <a href="#" class="flex-c-m trans-04 p-lr-25">
+                            <a href="/userProfile" class="flex-c-m trans-04 p-lr-25">
                                 My Account
                             </a>
 
