--- a/views/admin/Category/category.ejs
+++ b/views/admin/Category/category.ejs
@@ -251,12 +251,39 @@
                     </div>
                     <div class="text-center pagination">
                       <div class="pagination-container" style="display: flex; justify-content: center ;">
-                          <% for(let j=1 ; j<=totalPages ; j++){ %>
-                              <a href="?page=<%= j %>" class="btn btn-secondary"><%= j %></a>
-                          <% } %>
+
                       </div>
                       <br>
-                  </div>
+
+
+
+                      <div class="text-center pagination">
+                        <ul class="pagination">
+                          <% if (currentPage> 1) { %>
+                            <li class="page-item">
+                              <a class="page-link" href="?page=<%= parseInt(currentPage) - 1 %>" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                              </a>
+                            </li>
+                          <% } %>
+                          <% for (let i=1; i <=totalPages; i++) { %>
+                            <li class="page-item <%= currentPage == i ? 'active' : '' %>">
+                                <a class="page-link" href="?page=<%= i %>">
+                                  <%= i %>
+                                </a>
+                              </li>
+                          <% } %>
+                            <% if (currentPage < totalPages) { %>
+                              <li class="page-item">
+                                <a class="page-link" href="?page=<%= parseInt(currentPage) + 1 %>" aria-label="Next">
+                                  <span aria-hidden="true">&raquo;</span>
+                                </a>
+                              </li>
+                            <% } %>
+                        </ul>
+                      </div>
+
+                    </div>
                   </div>
                 </div>
               </div>
