--- a/views/admin/Products/editProduct.ejs
+++ b/views/admin/Products/editProduct.ejs
@@ -165,7 +165,8 @@
                         <h3 class="page-title"> Edit Product </h3>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/admin/editProduct?id=<%= product._id %> ">Edit Product</a></li>
+                                <li class="breadcrumb-item"><a href="/admin/editProduct?id=<%= product._id %> ">Edit
+                                        Product</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Products</li>
                             </ol>
                         </nav>
@@ -180,7 +181,9 @@
                                     <h4 class="card-title">Edit Product</h4>
                                     <p class="card-description"> </p>
 
-                                    <form method="post" action="/admin/editProduct?id=<%= product._id %>" class="forms-sample" enctype="multipart/form-data" onsubmit="edit('<%= product._id%>')">
+                                    <form method="post" action="/admin/editProduct?id=<%= product._id %>"
+                                        class="forms-sample" enctype="multipart/form-data"
+                                        onsubmit="edit('<%= product._id%>')">
 
                                         <div class="form-group">
                                             <label>Product upload</label>
@@ -219,9 +222,6 @@
                                             </div>
                                         </div>
 
-
-
-
                                         <div class="form-group">
                                             <label>Name</label>
                                             <input type="text" value="<%= product.name %>" name="name"
@@ -237,130 +237,145 @@
                                             <input type="number" value="<%= product.quantity %>" name="quantity"
                                                 class="form-control" id="exampleInputPassword4" placeholder="Quantity">
                                         </div>
+
                                         <div class="form-group">
                                             <label>Categories</label>
-                                            <% for(let i=0; i<category.length; i++) { %>
-                                                <select class="form-control my-custom-dropdown" name="category">
-                                                    <option> <%= category[i].image %> </option>
-                                                    <!-- Add more <option> tags as needed -->
-                                                </select>
-                                            <% } %>
-                                            
-                                            
-                                            
+                                            <select class="form-control my-custom-dropdown" name="category">
+                                                <% category.forEach(function(cat) { %>
+                                                    <option value="<%= cat.name %>"> <!-- Change value to category name -->
+                                                        <%= cat.name %>
+                                                    </option>
+                                                <% }); %>
                                             </select>
+                                        </div>
+                                        
+
+
+                                        <div class="form-group">
+                                            <input type="hidden" name="product_id" value="<%= product._id %>">
+                                        </div>
+
+                                        <div class="form-group">
+                                            <input type="hidden" name="category_id" value="<%= category._id %>">
                                         </div>
 
 
                                         <div class="form-group">
                                             <label>Description</label>
-                                            <textarea class="form-control" value="<%= product.description %>"
-                                                name="description" id="exampleTextarea1" rows="4"></textarea>
+                                            <input class="form-control" name="description" id="description" rows="4" value="<%= product.description %>" required></input>
                                         </div>
+
+
                                         <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
                                         <button class="btn btn-light">Cancel</button>
-                                    </form>
+
+
+
+                                        </select>
                                 </div>
+
+                                </form>
                             </div>
                         </div>
-
-                        <% if(typeof message !=='undefined' ){ %>
-                            <p>
-                                <%= message %>
-                            </p>
-                            <% } %>
-
                     </div>
-                    <!-- content-wrapper ends -->
-                    <!-- partial:../../partials/_footer.html -->
-                    <footer class="footer">
-                        <div class="container-fluid clearfix">
-                            <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">kiona ©
-                                kiona.com 2020</span>
-                            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> <a
-                                    href="https://www.bootstrapdash.com/bootstrap-admin-template/"
-                                    target="_blank">kiona admin</a> from kiona.com</span>
-                        </div>
-                    </footer>
-                    <!-- partial -->
+
+                    <% if(typeof message !=='undefined' ){ %>
+                        <p>
+                            <%= message %>
+                        </p>
+                        <% } %>
+
                 </div>
-                <!-- main-panel ends -->
+                <!-- content-wrapper ends -->
+                <!-- partial:../../partials/_footer.html -->
+                <footer class="footer">
+                    <div class="container-fluid clearfix">
+                        <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">kiona ©
+                            kiona.com 2020</span>
+                        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> <a
+                                href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">kiona
+                                admin</a> from kiona.com</span>
+                    </div>
+                </footer>
+                <!-- partial -->
             </div>
-            <!-- page-body-wrapper ends -->
+            <!-- main-panel ends -->
         </div>
-        <!-- container-scroller -->
-        <!-- plugins:js -->
-        <script src="../../admin/vendors/js/vendor.bundle.base.js"></script>
-        <!-- endinject -->
-        <!-- Plugin js for this page -->
-        <!-- End plugin js for this page -->
-        <!-- inject:js -->
-        <script src="../../admin/js/off-canvas.js"></script>
-        <script src="../../admin/js/hoverable-collapse.js"></script>
-        <script src="../../admin/js/misc.js"></script>
-        <!-- endinject -->
-        <!-- Custom js for this page -->
-        <script src="../../admin/js/file-upload.js"></script>
-        <!-- End custom js for this page -->
+        <!-- page-body-wrapper ends -->
+    </div>
+    <!-- container-scroller -->
+    <!-- plugins:js -->
+    <script src="../../admin/vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <!-- End plugin js for this page -->
+    <!-- inject:js -->
+    <script src="../../admin/js/off-canvas.js"></script>
+    <script src="../../admin/js/hoverable-collapse.js"></script>
+    <script src="../../admin/js/misc.js"></script>
+    <!-- endinject -->
+    <!-- Custom js for this page -->
+    <script src="../../admin/js/file-upload.js"></script>
+    <!-- End custom js for this page -->
 
 
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 
-        <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                var cancelClicked = false; // Flag to track cancel button click
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var cancelClicked = false; // Flag to track cancel button click
 
-                var closeButtons = document.querySelectorAll('.close-button');
-                closeButtons.forEach(function (button) {
-                    button.addEventListener('click', function () {
-                        if (!cancelClicked) {
-                            var imageItem = button.closest('.image-item');
-                            imageItem.remove();
-                        }
-                    });
-                });
-
-                // Add event listener to cancel button
-                var cancelButton = document.querySelector('.btn-light');
-                cancelButton.addEventListener('click', function () {
-                    cancelClicked = true; // Set flag to true when cancel button is clicked
+            var closeButtons = document.querySelectorAll('.close-button');
+            closeButtons.forEach(function (button) {
+                button.addEventListener('click', function () {
+                    if (!cancelClicked) {
+                        var imageItem = button.closest('.image-item');
+                        imageItem.remove();
+                    }
                 });
             });
 
-            async function edit(id) {
-                try {
-                    const response = await axios.post(`http://localhost:8000/admin/editProduct?id=${id}`);
-                    if (response.data.success) {
-                        await Swal.fire({
-                            icon: 'success',
-                            title: 'Success',
-                            text: response.data.message
-                        });
-                        // Redirect after success
-                        window.location.href = `/admin/editProduct?id=${id}`;
-                    } else {
-                        await Swal.fire({
-                            icon: 'error',
-                            title: 'Error',
-                            text: response.data.message
-                        });
-                        // Redirect after error
-                        window.location.href = `/admin/editProduct?id=${id}`;
-                    }
-                } catch (error) {
-                    console.error('Error:', error);
-                    // Handle errors
-                    await Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while processing your request.'
-                    });
-                }
-            }
+            // Add event listener to cancel button
+            var cancelButton = document.querySelector('.btn-light');
+            cancelButton.addEventListener('click', function () {
+                cancelClicked = true; // Set flag to true when cancel button is clicked
+            });
+        });
 
-        </script>
+        // async function edit(id) {
+        //     try {
+        //         const response = await axios.post(`http://localhost:8000/admin/editProduct?id=${id}`);
+        //         if (response.data.success) {
+        //             await Swal.fire({
+        //                 icon: 'success',
+        //                 title: 'Success',
+        //                 text: response.data.message
+        //             });
+        //             // Redirect after success
+        //             window.location.href = `/admin/editProduct?id=${id}`;
+        //         } else {
+        //             await Swal.fire({
+        //                 icon: 'error',
+        //                 title: 'Error',
+        //                 text: response.data.message
+        //             });
+        //             // Redirect after error
+        //             window.location.href = `/admin/editProduct?id=${id}`;
+        //         }
+        //     } catch (error) {
+        //         console.error('Error:', error);
+        //         // Handle errors
+        //         await Swal.fire({
+        //             icon: 'error',
+        //             title: 'Error',
+        //             text: 'An error occurred while processing your request.'
+        //         });
+        //     }
+        // }
+
+    </script>
 
 
 
