--- a/views/admin/Products/product.ejs
+++ b/views/admin/Products/product.ejs
@@ -181,173 +181,163 @@
 
                     <div class="main-panel w-100">
 
+                      <div class="row">
+                        <div class="col-12 grid-margin">
+                          <div class="card">
+                            <div class="card-body">
+                              <h4 class="card-title">Customer's Details</h4>
+                              <div class="table-responsive">
+                                <table class="table">
+                                  <thead>
+                                    <tr>
+                                      <th> Name </th>
+                                      <th> price </th>
+                                      <th>Quantity</th>
+                                      <th> category </th>
+                                      <th>Description</th>
+                                      <th> edit </th>
+                                      <th> Delete </th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
 
-                      <div class="row ">
-
-                        <div class="card">
-                          <div class="card-body">
-                            <h4 class="card-title">Customer's Details</h4>
-                            <div class="table-responsive">
-                              <table class="table">
-                                <thead>
-                                  <tr>
-                                    <th> Name </th>
-                                    <th> price </th>
-                                    <th>Quantity</th>
-                                    <th> category </th>
-                                    <th>Description</th>
-                                    <th> edit </th>
-                                    <th> Delete </th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-
-                                  <% if(product.length>0){
-                                    for(let i=0 ; i<product.length ; i++){ %>
-                                      <tr>
-                                        <td>
-                                          <img src="/Photos/product/<%= product[i].image[0] %>" class="mr-2"
-                                            alt="<%= product[i].image[0] %>">
-                                          <%= product[i].name %>
-                                        </td>
-                                        <td>
-                                          <%= product[i].price %>
-                                        </td>
-                                        <td>
-                                          <%= product[i].quantity %>
-                                        </td>
-                                        <td>
-                                          <%= product[i].category %>
-                                        </td>
-                                        <td>
-                                          <%= product[i].description %>
-                                        </td>
-                                        <td>
-                                          <button class="btn btn-info"
-                                            onclick="editProduct('<%= product[i]._id %>')">Edit</button>
-                                        </td>
-                                        <td> <button type="button" class="btn btn-danger"
-                                            onclick="deleteProduct('<%= product[i]._id %>')">Delete</button> </td>
-                                      </tr>
-                                      <% } }else{ %>
+                                    <% if(product.length>0){
+                                      for(let i=0 ; i<product.length ; i++){ %>
                                         <tr>
-                                          <td colspan="6">User not fount</td>
+                                          <td>
+                                            <img src="/Photos/product/<%= product[i].image[0] %>" class="mr-2"
+                                              alt="<%= product[i].image[0] %>">
+                                            <%= product[i].name %>
+                                          </td>
+                                          <td>
+                                            <%= product[i].price %>
+                                          </td>
+                                          <td>
+                                            <%= product[i].quantity %>
+                                          </td>
+                                          <td>
+                                            <%= product[i].category %>
+                                          </td>
+                                          <td>
+                                            <%= product[i].description %>
+                                          </td>
+                                          <td>
+                                            <a href="/admin/editProduct?id=<%= product[i]._id %>"> <button
+                                                class="btn btn-info">Edit</button> </a>
+                                          </td>
+                                          <td> <button type="button" class="btn btn-danger"
+                                              onclick="deleteProduct('<%= product[i]._id %>')">Delete</button> </td>
                                         </tr>
-                                        <% } %>
-                                </tbody>
-                              </table>
+                                        <% } }else{ %>
+                                          <tr>
+                                            <td colspan="6">User not fount</td>
+                                          </tr>
+                                          <% } %>
+                                  </tbody>
+                                </table>
+                              </div>
                             </div>
                           </div>
                         </div>
                       </div>
-                    </div>
-                  </div>
-                  <div class="text-center pagination">
-                    <div class="pagination-container" style="display: flex; justify-content: center ;">
-
-                    </div>
-                    <br>
-
-
-                    
-                    <div class="text-center pagination">
-                      <ul class="pagination">
-                        <% if (currentPage> 1) { %>
-                          <li class="page-item">
-                            <a class="page-link" href="?page=<%= parseInt(currentPage) - 1 %>" aria-label="Previous">
-                              <span aria-hidden="true">&laquo;</span>
-                            </a>
-                          </li>
+                      <div class="text-center pagination">
+                      <div class="pagination-container" style="display: flex; justify-content: center ;">
+                      </div>
+                      <br>
+                      <div class="text-center pagination">
+                        <ul class="pagination">
+                          <% if (currentPage> 1) { %>
+                            <li class="page-item">
+                              <a class="page-link" href="?page=<%= parseInt(currentPage) - 1 %>" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                              </a>
+                            </li>
                           <% } %>
-                            <% for (let i=1; i <=totalPages; i++) { %>
-                              <li class="page-item <%= currentPage == i ? 'active' : '' %>">
+                          <% for (let i=1; i <=totalPages; i++) { %>
+                            <li class="page-item <%= currentPage == i ? 'active' : '' %>">
                                 <a class="page-link" href="?page=<%= i %>">
                                   <%= i %>
                                 </a>
                               </li>
-                              <% } %>
-                                <% if (currentPage < totalPages) { %>
-                                  <li class="page-item">
-                                    <a class="page-link" href="?page=<%= parseInt(currentPage) + 1 %>"
-                                      aria-label="Next">
-                                      <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                  </li>
-                                  <% } %>
-                      </ul>
+                          <% } %>
+                            <% if (currentPage < totalPages) { %>
+                              <li class="page-item">
+                                <a class="page-link" href="?page=<%= parseInt(currentPage) + 1 %>" aria-label="Next">
+                                  <span aria-hidden="true">&raquo;</span>
+                                </a>
+                              </li>
+                            <% } %>
+                        </ul>
+                      </div>
+
                     </div>
-
                   </div>
+                    </div>
                 </div>
-
-
-
-
               </div>
             </div>
-          </div>
 
-          <!-- content-wrapper ends -->
-          <!-- partial:../../partials/_footer.html -->
-          <footer class="footer">
-            <div class="container-fluid clearfix">
-              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Kiona © kiona.com
-                2020</span>
-              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">  <a
-                  href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Kiona admin
+            <!-- content-wrapper ends -->
+            <!-- partial:../../partials/_footer.html -->
+            <footer class="footer">
+              <div class="container-fluid clearfix">
+                <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Kiona © kiona.com
+                  2020</span>
+                <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> <a
+                    href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Kiona admin
                   </a> from kiona.com</span>
-            </div>
-          </footer>
-          <!-- partial -->
+              </div>
+            </footer>
+            <!-- partial -->
+          </div>
+          <!-- main-panel ends -->
         </div>
-        <!-- main-panel ends -->
+        <!-- page-body-wrapper ends -->
       </div>
-      <!-- page-body-wrapper ends -->
-    </div>
-    <!-- container-scroller -->
-    <!-- plugins:js -->
-    <script src="../../admin/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
-    <script src="../../admin/js/off-canvas.js"></script>
-    <script src="../../admin/js/hoverable-collapse.js"></script>
-    <script src="../../admin/js/misc.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page -->
-    <script src="../../admin/js/file-upload.js"></script>
-    <!-- End custom js for this page -->
+      <!-- container-scroller -->
+      <!-- plugins:js -->
+      <script src="../../admin/vendors/js/vendor.bundle.base.js"></script>
+      <!-- endinject -->
+      <!-- Plugin js for this page -->
+      <!-- End plugin js for this page -->
+      <!-- inject:js -->
+      <script src="../../admin/js/off-canvas.js"></script>
+      <script src="../../admin/js/hoverable-collapse.js"></script>
+      <script src="../../admin/js/misc.js"></script>
+      <!-- endinject -->
+      <!-- Custom js for this page -->
+      <script src="../../admin/js/file-upload.js"></script>
+      <!-- End custom js for this page -->
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-    <script>
-      async function editProduct(id) {
-        window.location = `/admin/editProduct?id=${id}`
-      }
-
-      async function deleteProduct(id) {
-        const responce = await axios.post('http://localhost:8000/admin/product/delete', { id })
-        if (responce.data.success) {
-          await Swal.fire({
-            icon: 'success',
-            title: 'Success',
-            text: responce.data.message
-          })
-          window.location.href = '/admin/product';
-        } else {
-          await Swal.fire({
-            icon: 'error',
-            title: 'error',
-            text: responce.data.message
-          })
-          window.location.href = '/admin/product';
+      <script>
+        async function editProduct(id) {
+          window.location = `/admin/editProduct?id=${id}`
         }
-      }
+
+        async function deleteProduct(id) {
+          const responce = await axios.post('http://localhost:8000/admin/product/delete', { id })
+          if (responce.data.success) {
+            await Swal.fire({
+              icon: 'success',
+              title: 'Success',
+              text: responce.data.message
+            })
+            window.location.href = '/admin/product';
+          } else {
+            await Swal.fire({
+              icon: 'error',
+              title: 'error',
+              text: responce.data.message
+            })
+            window.location.href = '/admin/product';
+          }
+        }
 
 
-    </script>
+      </script>
 
 
 </body>
